Bug 231079 - key import from server by id fails
Summary: key import from server by id fails
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified NetBSD
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-17 11:18 UTC by mateusz-lists
Modified: 2010-03-20 17:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mateusz-lists 2010-03-17 11:18:51 UTC
Version:           Version 2.3.0 (using KDE 4.4.1)
Compiler:          gcc-4.4.3-2.i686 
OS:                NetBSD
Installed from:    Unlisted Binary Package

Trying import key by id reported by kmail: 0x5C323FD893626F7A

Starting kgpg
Menu/key server dialog
In text to search or ID I paste:
0x5C323FD893626F7A
having selected default keyserver: wwwkeys.eu.pgpg.net
Click Sarch.
I see one matching key, 
Selecting without expanding wchich puts 93626F7A in "key to import field".
Clicking import.
Getting "An error occured while scannign your keyring"
Details:
gpg: error reading key: public key not found
tru::0:1219156334:1283328721:3:1:5

On other hand signing in kmail works ok , I can browse my kering etc using KGpg.

Anyway great thanks for work on KGPG, nice software !
Regards, TIA
Comment 1 Rolf Eike Beer 2010-03-20 15:38:34 UTC
SVN commit 1105542 by dakon:

Fix misleading error message when importing keys from keyserver

BUG:231079

Importing worked ok but afterwards GnuPG usually complained that it can't load a key with the name "New key" from keyring.

 M  +1 -1      keyservers.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1105542
Comment 2 Rolf Eike Beer 2010-03-20 17:02:07 UTC
SVN commit 1105567 by dakon:

fix error message when importing keys from keyserver

BUG:231079


 M  +3 -2      keyservers.cpp  
 M  +3 -2      keysmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1105567