Fix misleading error message when importing keys from keyserver

BUG:231079

Importing worked ok but afterwards GnuPG usually complained that it can't load a key with the name "New key" from keyring.

svn path=/trunk/KDE/kdeutils/kgpg/; revision=1105542